--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
